--- a/output/index.html
+++ b/output/index.html
@@ -20,6 +20,7 @@
                 <a href="" class="header__box-link"><img src="..//image/icons/user.svg" alt="" /></a>
                 <a href="" class="header__box-link"><img src="..//image/icons/search.svg" alt="" /></a>
                 <a href="" class="header__box-link"><img src="..//image/icons/shop bag.svg" alt="" /></a>
+                <div class="header__box-count-product"></div>
             </div>
         </header>
         <main class="main">
@@ -40,161 +41,39 @@
             </section>
             <section class="block">
                 <nav class="block__nav">
-                    <h2 class="block__nav-link active">Architecture</h2>
-                    <h2 class="block__nav-link">Art & Fashion</h2>
-                    <h2 class="block__nav-link">Biography</h2>
-                    <h2 class="block__nav-link">Business</h2>
-                    <h2 class="block__nav-link">Crafts & Hobbies</h2>
-                    <h2 class="block__nav-link">Drama</h2>
-                    <h2 class="block__nav-link">Fiction</h2>
-                    <h2 class="block__nav-link">Food & Drink</h2>
-                    <h2 class="block__nav-link">Health & Wellbeing</h2>
-                    <h2 class="block__nav-link">History & Politics</h2>
-                    <h2 class="block__nav-link">Humor</h2>
-                    <h2 class="block__nav-link">Poetry</h2>
-                    <h2 class="block__nav-link">Psychology</h2>
-                    <h2 class="block__nav-link">Science</h2>
-                    <h2 class="block__nav-link">Technology</h2>
-                    <h2 class="block__nav-link">Travel & Maps</h2>
                 </nav>
 
                 <div class="block__box">
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
-                    <div class="card-book">
-                        <div class="card-book__img"></div>
-                        <div class="card-book__box">
-                            <p class="card-book__box-autor">Kevin Kwan</p>
-                            <h2 class="card-book__box-title">Crazy rich asians</h2>
-                            <div class="card-book__box-raiting">
-                                <div class="card-book__box-raiting--star">
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
-                                </div>
-                                <p class="card-book__box-raiting--text">252 review</p>
-                            </div>
-                            <p class="card-book__box-description">
-                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
-                            </p>
-                            <p class="card-book__box-price">4.99</p>
-                            <button class="card-book__box-button">buy now</button>
-                        </div>
-                    </div>
 
-                    <button class="button-load">Load more</button>
+                    <!-- <div class="card-book">
+                        <div class="card-book__img"></div>
+                        <div class="card-book__box">
+                            <p class="card-book__box-autor">Kevin Kwan</p>
+                            <h2 class="card-book__box-title">Crazy rich asians</h2>
+                            <div class="card-book__box-raiting">
+                                <div class="card-book__box-raiting--star">
+                                    <img src="../image/icons/Star.svg" alt="" />
+                                    <img src="../image/icons/Star.svg" alt="" />
+                                    <img src="../image/icons/Star.svg" alt="" />
+                                    <img src="../image/icons/Star.svg" alt="" />
+                                    <img src="../image/icons/Star.svg" alt="" />
+                                </div>
+                                <p class="card-book__box-raiting--text">252 review</p>
+                            </div>
+                            <p class="card-book__box-description">
+                                the outrageously funny debut novel about three super-rich, pedigreed Chinese families and the gossip...
+                            </p>
+                            <p class="card-book__box-price">4.99</p>
+                            <button class="card-book__box-button">buy now</button>
+                        </div>
+                    </div> -->
+                    
+
                 </div>
+
             </section>
+            <button class="button-load">Load more</button>
+
         </main>
 
         <script src="./main.js"></script>
