--- a/output/index.html
+++ b/output/index.html
@@ -11,15 +11,16 @@
         <header class="header">
             <h1 class="header__title">Bookshop</h1>
             <nav class="header__nav">
-                <h2 class="header__nav-link active">books</h2>
-                <h2 class="header__nav-link">audiobooks</h2>
-                <h2 class="header__nav-link">Stationery & gifts</h2>
-                <h2 class="header__nav-link">blog</h2>
+                <button class="header__nav-link active">books</button>
+                <button class="header__nav-link">audiobooks</button>
+                <button class="header__nav-link">Stationery & gifts</button>
+                <button class="header__nav-link">blog</button>
+                
             </nav>
             <div class="header__box">
-                <a href="" class="header__box-link"><img src="..//image/icons/user.svg" alt="" /></a>
-                <a href="" class="header__box-link"><img src="..//image/icons/search.svg" alt="" /></a>
-                <a href="" class="header__box-link"><img src="..//image/icons/shop bag.svg" alt="" /></a>
+                <button class="header__box-link"><img src="..//image/icons/user.svg" alt="" /></button>
+                <button class="header__box-link"><img src="..//image/icons/search.svg" alt="" /></button>
+                <button class="header__box-link"><img src="..//image/icons/shop bag.svg" alt="" /></button>
                 <div class="header__box-count-product"></div>
             </div>
         </header>
