--- a/output/index.html
+++ b/output/index.html
@@ -46,6 +46,31 @@
 
                 <div class="block__box">
 
+                    
+
+                </div>
+
+            </section>
+            <button class="button-load">Load more</button>
+        </main>
+
+        <script src="./main.js"></script>
+    </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     <!-- <div class="card-book">
                         <div class="card-book__img"></div>
                         <div class="card-book__box">
@@ -54,7 +79,7 @@
                             <div class="card-book__box-raiting">
                                 <div class="card-book__box-raiting--star">
                                     <img src="../image/icons/Star.svg" alt="" />
-                                    <img src="../image/icons/Star.svg" alt="" />
+                                    <img src="" alt="" />
                                     <img src="../image/icons/Star.svg" alt="" />
                                     <img src="../image/icons/Star.svg" alt="" />
                                     <img src="../image/icons/Star.svg" alt="" />
@@ -68,14 +93,3 @@
                             <button class="card-book__box-button">buy now</button>
                         </div>
                     </div> -->
-                    
-
-                </div>
-
-            </section>
-            <button class="button-load">Load more</button>
-        </main>
-
-        <script src="./main.js"></script>
-    </body>
-</html>
